--- a/MovieExplorer.Client/MovieExplorer.Client.csproj
+++ b/MovieExplorer.Client/MovieExplorer.Client.csproj
@@ -39,6 +39,7 @@
     <Compile Include="ApplicationMaster.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\MovieSharpException.cs" />
+    <Compile Include="Messages\SelectedMovieMessage.cs" />
     <Compile Include="Models\BaseResponse.cs" />
     <Compile Include="Models\Collection.cs" />
     <Compile Include="Models\CollectionImages.cs" />
@@ -53,13 +54,14 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\MoviesResult.cs" />
     <Compile Include="Models\SearchResult.cs" />
+    <Compile Include="NavigationParameters\SelectedMovie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IMovieSharpClient.cs" />
-    <Compile Include="Services\MovieSharpClient.cs" />
-    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="Services\IMovieSharpService.cs" />
+    <Compile Include="Services\MovieSharpService.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
     <Compile Include="App.cs" />
-    <Compile Include="ViewModels\FirstViewModel.cs" />
+    <Compile Include="ViewModels\DetailViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Threading.Tasks">
@@ -67,6 +69,13 @@
     </Reference>
     <Reference Include="Microsoft.Threading.Tasks.Extensions">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\portable-net45+win8+wp8+wpa81\Microsoft.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Android">
+      <HintPath>..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v6.0\Mono.Android.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.Messenger, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MvvmCross.Plugin.Messenger.4.1.4\lib\portable-net45+win+wpa81+wp80\MvvmCross.Plugins.Messenger.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.dll</HintPath>
