--- a/MovieExplorer.Client/packages.config
+++ b/MovieExplorer.Client/packages.config
@@ -8,6 +8,7 @@
   <package id="MvvmCross.Binding" version="4.1.4" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.Core" version="4.1.4" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="MvvmCross.Plugin.Messenger" version="4.1.4" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmCross.StarterPack" version="4.1.4" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
 </packages>
