--- a/MovieExplorer.Droid/packages.config
+++ b/MovieExplorer.Droid/packages.config
@@ -4,6 +4,7 @@
   <package id="MvvmCross.Binding" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Core" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Plugin.Messenger" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.StarterPack" version="4.1.4" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="MonoAndroid60" />
