--- a/MovieExplorer.Client/MovieExplorer.Client.csproj
+++ b/MovieExplorer.Client/MovieExplorer.Client.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IMovieSharpService.cs" />
     <Compile Include="Services\MovieSharpService.cs" />
+    <Compile Include="ViewModels\FavoritesViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="App.cs" />
     <Compile Include="ViewModels\DetailViewModel.cs" />
