--- a/MovieExplorer.Droid/Properties/AndroidManifest.xml
+++ b/MovieExplorer.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="MovieExplorer.Droid.MovieExplorer.Droid" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.movie.explorer" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="16" />
 	<application android:label="MovieExplorer" android:icon="@drawable/Icon" android:theme="@style/MyTheme"></application>
 </manifest>
