Configured toolbars and minor view fixes.

--- a/MovieExplorer.Droid/MovieExplorer.Droid.csproj
+++ b/MovieExplorer.Droid/MovieExplorer.Droid.csproj
@@ -167,6 +167,9 @@
     <AndroidResource Include="Resources\layout\FavoritesView.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\Menu\search.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\MainView.axml" />
