--- a/MovieExplorer.Droid/packages.config
+++ b/MovieExplorer.Droid/packages.config
@@ -9,6 +9,7 @@
   <package id="MvvmCross.Platform" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Plugin.File" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.Plugin.Json" version="4.1.4" targetFramework="monoandroid60" />
+  <package id="MvvmCross.Plugin.Messenger" version="4.1.4" targetFramework="monoandroid60" />
   <package id="MvvmCross.StarterPack" version="4.1.4" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
